hphp/hack/test/typecheck/new_switch_exhaustivity/intersection2.bad.php.exp
ERROR: File "intersection2.bad.php", line 7, characters 3-47:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "intersection2.bad.php", line 7, characters 11-12:
  The scrutinee has type `(I & J)` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
