hphp/hack/test/typecheck/new_switch_exhaustivity/intersection2.bad.php
<?hh

interface I {}
interface J {}

function main((I & J) $x): void {
  switch ($x) {
    case null:
      break;
  }
}
